GOBE-68 Challenge feature 1.1.7 (Challenge Statistic fixed fe)

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -606,7 +606,15 @@
     "loadingStarLeaderboard": "Loading star leaderboard...",
     "noMembersFound": "No members found",
     "avgStars": "Avg stars"
+  },
+  "challengeStatistic": {
+    "total": "Total Participants",
+    "completed": "Completed",
+    "notCompleted": "Not Completed",
+    "dailyOverview": "Daily progress overview",
+    "completionRate": "Daily completion rate"
   }
+
 
 }
 
