GOBE-68 Admin challenge list v1.2.6 fix noti

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -163,6 +163,7 @@
   "createChallenge": {
     "create": "Create Challenge",
     "creating": "Creating Challenge",
+    "maxMembersPerGroup": "Số người trong 1 nhóm",
     "success": "Challenge created successfully!",
     "editTitle": "Edit Challenge",
     "successUpdate": "Challenge updated successfully!",
