GOBE-68 Challenge feature 1.1.9 Create challenge for group

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -202,7 +202,8 @@
     "description": "Challenge Description",
     "cancel": "Cancel",
     "validationError": "Please correct all errors before submitting.",
-    "fail": "Failed to update challenge: "
+    "fail": "Failed to update challenge: ",
+    "joinCheckbox": "Join this challenge yourself?"
   },
 
   "ProofUploads": {
